chore(build): use JDK11 to build the entire project (#17)
* chore: first attempt to build the mailbox with OpenJDK 11

* chore: update jaxb-api to 2.3.1

* chore: remove no more valid org.newsclub.junixsocket:1.3

* chore: store: junixsocket 2.4.0

* chore: beautify xml resources

* chore(jar): bump version to 22.3.0